--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "source $HOME/.nvm/nvm.sh && nvm use",
+    "nvm": "nvm use"
   },
   "dependencies": {
     "react": "^18.2.0",
