--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "@tanstack/react-query": "^4.36.1",
     "axios": "^1.6.7",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.1"
   },
   "devDependencies": {
     "@tanstack/eslint-plugin-query": "^5.18.0",
@@ -25,6 +26,7 @@
     "@typescript-eslint/parser": "^6.14.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
+    "clsx": "^2.1.0",
     "eslint": "^8.55.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-react-hooks": "^4.6.0",
