--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tanstack/react-query": "^4.36.1",
     "axios": "^1.6.7",
     "react": "^18.2.0",
+    "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.5.3",
     "tailwind-merge": "^2.2.1"
