[feat] : useHistory 훅 생성
- 현재 url 의 query와 pathname 정보 제공
- query 업데이트 함수 제공
- query 내 특정 카테고리 값 getter 정의

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,6 +27,7 @@
       "@utils/*": ["./src/utils/*"],
       "@style/*": ["./src/style/*"],
       "@assets/*": ["./src/assets/*"],
+      "@hooks/*": ["./src/hooks/*"],
       "@components/*": ["./src/components/*"]
     }
   },
