--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,10 @@
 {
-  "singleQuote": true,
-  "semi": true,
+  "printWidth": 100,
   "tabWidth": 2,
+  "singleQuote": true,
   "trailingComma": "es5",
-  "printWidth": 80,
-  "arrowParens": "always"
+  "useTabs": false,
+  "arrowParens": "always",
+  "bracketSpacing": true,
+  "bracketSameLine": false
 }
