--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-content-loader": "^6.2.1",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.12",
     "react-intersection-observer": "^9.5.3",
     "tailwind-merge": "^2.2.1"
   },
